--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,16 +4,14 @@ version = "0.1.0"
 edition = "2021"
 
 [lib]
-crate-type = ["cdylib", "rlib"]
+crate-type = ["lib", "cdylib"]
+doctest = false
 
 [dependencies]
-soroban-sdk = "20.5.0"
+soroban-sdk = { version = "23.0.2" }
 
 [dev-dependencies]
-soroban-sdk = { version = "20.5.0", features = ["testutils"] }
-
-[features]
-testutils = ["soroban-sdk/testutils"]
+soroban-sdk = { version = "23.0.2", features = ["testutils"] }
 
 [profile.release]
 opt-level = "z"
