--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Rust
 /target
 Cargo.lock
+test_snapshots
 
 # IDE
 .kiro/
@@ -12,3 +13,6 @@ Thumbs.db
 
 # Soroban
 .soroban/
+
+# Others
+gitignore
